tests/success/const_decl.kd
const CONST_NUM: i32 = 5;

fn main(): i32 {
    return CONST_NUM + 15;
}
