tests/compile-error/bad_if.kd
fn main(): i32 {
    if (5 + 5) {}
    return 0;
}
